se incluye un login sencillo y se mejora el saludo

--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
         </nav>
         -->
     </header>
+        <!--MODAL DE LOGIN---->
+        <div id="loginModal" class="modal">
+            <div class="modal-content">
+                <h2>Login</h2>
+                <label for="username">Nombre de usuario:</label>
+                <input type="text" id="username" name="username" required>
+                <button id="loginButton">Login</button>
+            </div>
+        </div>
+
+        <!--FIN MODAL-->
+
     <div class="container">
         <div class="perfil">
             <div id="fecha">21/06/2024</div>
-            <h1>Hola, Emanuel</h1>
+            <h2 id="saludo">Hola usuario</h2>
             <span>vamos a ordenar tus tareas</span>
         </div>
         
