nuevo commit para resolver error de funcionalidad en pages de github

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles_sketch.css">
     <script src="https://kit.fontawesome.com/ded43e76c5.js" crossorigin="anonymous"></script>
-
+    <script defer src="./js/script.js"></script>
     <title>Gestor de tareas</title>
 </head>
 
@@ -76,7 +76,7 @@
         </div>
 
     </div>
-    <script defer src="/js/script.js"></script>
+    
 </body>
 
 </html>
