--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://kit.fontawesome.com/ded43e76c5.js" crossorigin="anonymous"></script>
     <script defer type="module" src="./js/script.js"></script>
+    <script defer src="./js/Apis.js"></script>
     <title>Gestor de tareas</title>
 </head>
 
@@ -63,7 +64,7 @@
 
     </section>
     <section class="api-container" ID="api2">
-
+        <h2>Feriados</h2>
     </section>
     <!--sweetalert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
