se acondiciona funcionamiento de api cotizacion dolar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </section>
         <section class="api-container" id="api1">
-            <h2>Clima</h2>
+            <h2>Cotizacion Dolar</h2>
         </section>
         <section class="api-container" id="api2">
             <h2>Feriados</h2>
